--- a/referencias.html
+++ b/referencias.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HTML</title>
+  <title>Referencias</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="scripts/styles/referencias.css">
   <link rel="stylesheet" href="scripts/styles/estilo.css">
@@ -16,7 +16,7 @@
     <nav>
       <div class="Inicio">
         <h2>HAYLIN HENAO VARGAS</h2>
-        <a href="perfil.html"><img src="asset/images/FONDO.jpg" alt="logo" width="74" height="33" ></a>
+        <a href="index.html"><img src="asset/images/FONDO.jpg" alt="logo" width="74" height="33" ></a>
         <ul class="redes">
           <li><a href="https://www.instagram.com/haylin0820/">Instagram</a></li>
           <li><a href="#">haylinhenao08@gmail.com</a></li>
@@ -25,7 +25,7 @@
         
       </div>
       <ul>
-        <li><a href="perfil.html">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="proyectos.html">Proyectos</a></li>
         <li><a href="experiencia.html">Experiencia</a></li>
         <li><a href="referencias.html">Referencias</a></li>
